fix wrap container

--- a/assets/css/templatemo-lava.css
+++ b/assets/css/templatemo-lava.css
@@ -152,6 +152,8 @@ a.main-button-slider {
   color: #fff;
   font-weight: 600;
   letter-spacing: 1px;
+  white-space: nowrap; /* Tambahkan ini */
+  display: inline-block;
   -webkit-transition: all 0.3s ease 0s;
   -moz-transition: all 0.3s ease 0s;
   -o-transition: all 0.3s ease 0s;
@@ -663,10 +665,13 @@ welcome
 }
 
 .welcome-area .header-text .left-text {
+  flex: 1;
+  min-width: 300px; /* Berikan lebar minimum untuk mencegah penyusutan berlebihan */
+  padding: 20px;
   position: relative;
   align-self: center;
-  margin-top: 35%;
-  transform: perspective(1px) translateY(-30%) !important;
+  margin-top: 10%; /* Kurangi dari 35% */
+  transform: none; /* Hapus transform */
 }
 
 .welcome-area .header-text h1 {
@@ -695,7 +700,7 @@ welcome
 
 @media (max-width: 1420px) {
   .welcome-area .header-text {
-    width: 70%;
+    width: 90%;
     margin-left: 5%;
   }
 }
@@ -705,8 +710,9 @@ welcome
     margin-top: 50%;
   }
   .welcome-area .header-text {
-    width: 50%;
-    margin-left: 5%;
+    width: 90%; /* Pastikan lebar cukup */
+        margin-left: auto;
+        margin-right: auto;
   }
 }
 
@@ -715,8 +721,8 @@ welcome
     height: auto;
   }
   .welcome-area .header-text {       
-    width: 92%;
-    padding-top: 793px;
+    width: 100%;
+    padding-top: 500px;
   }
   .welcome-area .header-text .left-text {
     margin-top: 5%;
